--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -61,7 +61,7 @@ Linear Regression models based on economic factors, disease burden factors, and 
 * Life Expectancy (Prior to Pandemic)
 ** Policy Recommendation: Life expectancy often serves as an indicator of a country's overall medical infrastructure. Medical infrastructure resources should be the focus of aid, more so than economic relief alone. 
 * Women in Business and Law
-** Policy Recommendation: This may indicate a nation's gender-based social liberality. Aid should thus be considered for nations that are **needs end of sentence - ex: nations that are socially more conservative? ~ what about "Initiatives to promote womens' equality and educational attainment may also have secondary benefits to vaccination and similar public-health campaigns." **
+** Policy Recommendation: Initiatives to promote womens' equality and educational attainment may also have secondary benefits to vaccination and similar public-health campaigns and thus should not be overlooked.
 * Regime Type
 ** Policy Recommendation: Mutual aid relationships should be facilitated between nations of varying regime types.  
 * Number of Internet Users
@@ -80,11 +80,11 @@ We have developed a robust vaccination index capturing a country's past vaccinat
 In conclusion, we were able to quantitatively define the success of each country's vaccination campaign against COVID-19 and to identify key, modifiable factors that may contribute. While the modest predictive ability of our final model on unseen data is one of several limitations to consider in this work, 
 the COVID-19 crisis has presented a multifaceted and evolving challenge to governments across the globe. Therefore, our analysis represents an important contribution to objectively assessing each country's response and identifying factors that should be considered in addressing future global health crises.
 
-# Data Preprocessing
+# Data Preprocessing, EDA & Summary Measures
 
-Before starting to do more involved EDA, we will preprocess our data to ensure we have workable datasets to begin our exploration with. At the completion of preprocessing, we will have two longitudinal dataframes: one containing WSD predictors and one containing COVID case, death, and vaccination data. These dataframes will subsequently be summarized to capture the most important features of each variable by country, enabling us to merge the dataframes and model on these sythesized per-country metrics.
+Before starting to do more involved EDA, we will preprocess our data to ensure we have workable datasets to begin our exploration with. At the completion of preprocessing, we will have two longitudinal dataframes: one containing WSD predictors and one containing COVID case, death, and vaccination data. These dataframes will subsequently be summarized to capture the most important features of each variable by country, enabling us to merge the dataframes and model on these synthesized per-country metrics.
 
-## WSD preprocessing
+## WSD Preprocessing
 
 First, we will begin to process the World Sustainability Dataset. 
 
@@ -103,6 +103,7 @@ data.processed <- na.omit(data.90)
 # How many countries?
 n.countries <- length(unique(data.processed$Country.Name))
 ```
+
 After cleaning, we are left with `n.countries` countries, which is a workable amount. 
 
 ```{r}
@@ -149,10 +150,157 @@ write.csv(data.processed, "data/WorldSustainabilityData_Processed.csv", row.name
 wsd <- data.processed %>% dplyr::select(1:2,"Continent", "WorldRegion", 3:21,23:31) %>% # rearrange a little to group continent & World Region with the other geographic data
   mutate(Country.Name=as.factor(Country.Name)) %>%
   rename(country=Country.Name)
+#renaming country factor levels to be compatible with COVID df
+wsd$country <- recode_factor(wsd$country,  "Iran, Islamic Rep."="Iran", "Bosnia and Herzegovina"="Bosnia And Herzegovina", "Cote d'Ivoire"="Cote D Ivoire", "Guinea-Bissau"="Guinea Bissau", "Kyrgyz Republic"="Kyrgyzstan", "North Macedonia"="Macedonia", "Eswatini"="Swaziland", "Vietnam"="Viet Nam", "Timor-Leste"="Timor Leste", "Slovak Republic"="Slovakia", "Congo, Rep."="Congo", "Congo, Dem. Rep."="DRC")
 ```
 
 
-## COVID preprocessing
+## WSD EDA
+
+We'll do some exploratory plotting for a few key predictors across all years of reported data. 
+
+```{r, fig.width=15, fig.height=6}
+# Frequency of Regime Types in our data
+ggplot(data.processed, aes(x=fct_infreq(RegimeType), fill=fct_infreq(RegimeType))) +
+  geom_bar(show.legend = FALSE) +
+  xlab("Regime Type") +
+  ylab("Count") + 
+  ggtitle("Frequency of Regime Type")
+
+# World Region Representation
+ggplot(data.processed, aes(x=fct_infreq(WorldRegion), fill=fct_infreq(WorldRegion))) +
+  geom_bar(show.legend = FALSE) +
+  xlab("Region") +
+  ylab("Count") + 
+  ggtitle("Frequency of World Regions")
+
+# GDP per Capita by WorldRegion
+ggplot(data.processed, aes(y=GDP.PerCapita.Current, x=WorldRegion, fill=WorldRegion)) +
+  geom_boxplot(show.legend = FALSE) +
+  xlab("WorldRegion") +
+  ylab("GDP Per Capita") + 
+  ggtitle("Per Capita GDP by WorldRegion")
+
+# Internet Use by WorldRegion
+ggplot(data.processed, aes(y=IndividualsUsingInternet, x=WorldRegion, fill=WorldRegion)) +
+  geom_boxplot(show.legend = FALSE) +
+  xlab("WorldRegion") +
+  ylab("Internet Users") + 
+  ggtitle("Internet Users by WorldRegion")
+```
+
+Further visualizations can be found in the Appendix under `Additional EDA`.
+
+## WSD Summary Measures
+
+Next, we'll try several different methods of summarizing this longitudinal WSD data into a single "timepoint". We selected the latest data reported for each country (restricted to 2016 or later) and calculated: the average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018); and the relative and absolute change in each parameter over time (2001-2018). In order to maximize completeness and recency of the dataset while minimizing colinearity, we decided to use each country's latest data and data averaged over 17 years in our models below. Code for unused summary dataframes can be found in the appendix.
+
+First we extract just the last year of reported data for each country, restricted to 2016 or later. As seen below, the majority of countries have 2018 data, though we are able to preserve an additional 23 countries by reaching back to 2016 data. 
+
+
+```{r}
+# latest data for each country, restricted to 2016 or later
+wsd.latest <- wsd %>% arrange(Year) %>%
+  group_by(country) %>%
+  filter(Year >= 2016) %>%
+  slice_tail(n=1) %>%
+  ungroup()
+colnames(wsd.latest)[5:31] <- paste(colnames(wsd.latest)[5:31], "latest", sep = "_") #add suffix
+table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
+```
+
+As seen below, there is a great deal of variability in how many years each country has data reported in the WSD dataset:
+
+```{r}
+# averages for numeric
+wsd.avg.num <- wsd %>% arrange(Year) %>%
+  group_by(country) %>%
+  summarise_if(is.numeric, mean) %>%
+  ungroup() %>%
+  dplyr::select(-Year)
+colnames(wsd.avg.num)[2:25] <- paste(colnames(wsd.avg.num)[2:25], "avg", sep = "_") #add suffix
+
+# create a function to find the mode. Taken from: https://stackoverflow.com/questions/2547402/how-to-find-the-statistical-mode
+Mode <- function(x) {
+  ux <- unique(x)
+  ux[which.max(tabulate(match(x, ux)))]
+}
+
+# mode for factors
+wsd.avg.fac <- wsd %>% arrange(Year) %>%
+  group_by(country) %>%
+  mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
+         RegimeType = Mode(RegimeType),
+         nYears=n()) %>% #count how many years are being averaged for each country
+  ungroup() %>%
+  dplyr::select(country, WorldBankIncomeClass, RegimeType, nYears) %>%
+  distinct()
+colnames(wsd.avg.fac)[2:4] <- paste(colnames(wsd.avg.fac)[2:4], "avg", sep = "_") #add suffix
+
+# #make sure modes returned as expected 
+# angola <- wsd$WorldBankIncomeClass[wsd$country=="Angola"]
+# Mode(angola)
+# wsd.avg.fac$WorldBankIncomeClass[wsd.avg.fac$country=="Angola"]
+# #looks good!
+
+wsd.avg <- merge(wsd.avg.fac, wsd.avg.num, by="country") #rejoin num and fac
+table(as.factor(wsd.avg$nYears_avg)) # see yr frequencies
+ggplot(data = wsd.avg, aes(x = nYears_avg)) +
+  geom_bar(fill ="seagreen", color = "seagreen") + 
+  theme_bw() +
+  xlab("Number of years available in a given country") +
+  ylab("Number of countries") +
+  ggtitle("Frequency of countries reporting data for a given number of years")
+```
+This is a limitation that should be kept in mind when interpreting the results of our model and the predictive power of averaged variables in particular, since an averaged GDP for one country might reflect 17 years of data while the averaged GDP of another may only reflect 3 years. A full graphical representation of years reported by country can be found in the Appendix.
+
+Next we'll merge the latest data and averaged data into one wide wsd dataframe and remove any variables that are highly correlated:
+
+```{r fig.width=10, fig.height=10}
+# one predictor dataframe to rule them all
+wsd.df_list <- list(wsd.latest, wsd.avg) #dfs to merge, ordered purposefully for removing correlated predictors
+wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country')
+head(wsd.sum.wide)
+
+#removing 1 of each very colinear pair, method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r
+#stash year and non-numeric variables
+wsd.fac <- wsd.sum.wide %>%
+  select(negate(is.numeric)| "Year_latest", "nYears_avg")
+
+#plot
+# create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
+wsd.sum.wide %>% 
+  select_if(., is.numeric) %>%
+  cor(., use = "pairwise.complete.obs") %>%
+  corrplot(method = "color", 
+           type = "upper", order = "hclust", 
+           addCoef.col = "black", # Add coefficient of correlation
+           tl.col="black", tl.srt = 45, #Text label color and rotation
+           # hide correlation coefficient on the principal diagonal
+           diag = FALSE 
+           )
+
+#get colinearities  
+wsd.num <- wsd.sum.wide %>% 
+  select(-c("Year_latest", "nYears_avg")) %>%
+  select_if(., is.numeric)
+wsd.corr <- wsd.num %>%
+  cor(., use="pairwise.complete.obs")
+#removing upper triangle
+wsd.corr[upper.tri(wsd.corr)] <- 0
+diag(wsd.corr) <- 0
+
+#remove vars at abs(0.97) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
+wsd.list <-  apply(wsd.corr, 2, function(x) any(abs(x) > 0.97)) #list highly correlated variables
+wsd.nocor <- wsd.num[ , !wsd.list]
+#add back factors
+wsd.nocor <- cbind(wsd.fac, wsd.nocor)
+dim(wsd.nocor)
+head(wsd.nocor)
+```
+
+
+## COVID Preprocessing
 
 Next, we will read in COVID cases/deaths and vaccination data sets. We remove countries with too many NAs and generate new variables indicating cases and deaths per hundred, to account for the total population in each country.  
 
@@ -299,131 +447,12 @@ write.csv(df_merged, "data/covid_cases_vaccines_clean.csv")
 #rename prior to merge with WSD
 covid <- df_merged %>% ungroup()
 #save(covid, file = "data/covid_cases_vaccines_clean.Rda")
-```
 
-```{r}
-#some discrepancy in how countries are named, gonna fix that before proceeding
-wsd.country <- levels(wsd$country)
-covid.country <- levels(covid$country)
-#setdiff(wsd.country, covid.country) #only in wsd, not covid
-#setdiff(covid.country, wsd.country) #only in covid, not wsd
-
+#renaming country levels for compatibility with WSD
 covid$country <- recode_factor(covid$country, "UK"="United Kingdom", "Gambia"="Gambia, The", "Laos"="Lao PDR", "Egypt"="Egypt, Arab Rep.", "South Korea"="Korea, Rep.", "USA"="United States", "Russia"="Russian Federation", "Venezuela"="Venezuela, RB", "Democratic Republic Of The Congo"="DRC")
-wsd$country <- recode_factor(wsd$country,  "Iran, Islamic Rep."="Iran", "Bosnia and Herzegovina"="Bosnia And Herzegovina", "Cote d'Ivoire"="Cote D Ivoire", "Guinea-Bissau"="Guinea Bissau", "Kyrgyz Republic"="Kyrgyzstan", "North Macedonia"="Macedonia", "Eswatini"="Swaziland", "Vietnam"="Viet Nam", "Timor-Leste"="Timor Leste", "Slovak Republic"="Slovakia", "Congo, Rep."="Congo", "Congo, Dem. Rep."="DRC")
 ```
 
-
-# WSD EDA & Summary Values
-
-To start, we'll try several different methods of summarizing the longitudinal WSD data into a single "timepoint". We selected the latest data reported for each country (restricted to 2016 or later) and calculated: the average of each parameter over time (2001 to 2018); the average of the last 3 years of data (2016-2018); and the relative and absolute change in each parameter over time (2001-2018). In order to maximize completeness and recency of the dataset while minimizing colinearity, we decided to use each country's latest data and data averaged over 17 years in our models below. Code for unused summary dataframes can be found in the appendix.
-
-First we extract just the last year of reported data for each country, restricted to 2016 or later. As seen below, the majority of countries have 2018 data, though we are able to preserve an additional 23 countries by reaching back to 2016 data. 
-
-
-```{r}
-# latest data for each country, restricted to 2016 or later
-wsd.latest <- wsd %>% arrange(Year) %>%
-  group_by(country) %>%
-  filter(Year >= 2016) %>%
-  slice_tail(n=1) %>%
-  ungroup()
-colnames(wsd.latest)[5:31] <- paste(colnames(wsd.latest)[5:31], "latest", sep = "_") #add suffix
-table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
-```
-
-As seen below, there is a great deal of variability in how many years each country has data reported in the WSD dataset:
-
-```{r}
-# averages for numeric
-wsd.avg.num <- wsd %>% arrange(Year) %>%
-  group_by(country) %>%
-  summarise_if(is.numeric, mean) %>%
-  ungroup() %>%
-  dplyr::select(-Year)
-colnames(wsd.avg.num)[2:25] <- paste(colnames(wsd.avg.num)[2:25], "avg", sep = "_") #add suffix
-
-# create a function to find the mode. Taken from: https://stackoverflow.com/questions/2547402/how-to-find-the-statistical-mode
-Mode <- function(x) {
-  ux <- unique(x)
-  ux[which.max(tabulate(match(x, ux)))]
-}
-
-# mode for factors
-wsd.avg.fac <- wsd %>% arrange(Year) %>%
-  group_by(country) %>%
-  mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
-         RegimeType = Mode(RegimeType),
-         nYears=n()) %>% #count how many years are being averaged for each country
-  ungroup() %>%
-  dplyr::select(country, WorldBankIncomeClass, RegimeType, nYears) %>%
-  distinct()
-colnames(wsd.avg.fac)[2:4] <- paste(colnames(wsd.avg.fac)[2:4], "avg", sep = "_") #add suffix
-
-# #make sure modes returned as expected 
-# angola <- wsd$WorldBankIncomeClass[wsd$country=="Angola"]
-# Mode(angola)
-# wsd.avg.fac$WorldBankIncomeClass[wsd.avg.fac$country=="Angola"]
-# #looks good!
-
-wsd.avg <- merge(wsd.avg.fac, wsd.avg.num, by="country") #rejoin num and fac
-table(as.factor(wsd.avg$nYears_avg)) # see yr frequencies
-ggplot(data = wsd.avg, aes(x = nYears_avg)) +
-  geom_bar(fill ="seagreen", color = "seagreen") + 
-  theme_bw() +
-  xlab("Number of years available in a given country") +
-  ylab("Number of countries") +
-  ggtitle("Frequency of countries reporting data for a given number of years")
-```
-This is a limitation that should be kept in mind when interpreting the results of our model and the predictive power of averaged variables in particular, since an averaged GDP for one country might reflect 17 years of data while the averaged GDP of another may only reflect 3 years. A full graphical representation of years reported by country can be found in the Appendix.
-
-Next we'll merge the latest data and averaged data into one wide wsd dataframe and remove any variables that are highly correlated:
-
-```{r fig.width=10, fig.height=10}
-# one predictor dataframe to rule them all
-wsd.df_list <- list(wsd.latest, wsd.avg) #dfs to merge, ordered purposefully for removing correlated predictors
-wsd.sum.wide <- wsd.df_list %>% reduce(full_join, by='country')
-head(wsd.sum.wide)
-
-#removing 1 of each very colinear pair, method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r
-#stash year and non-numeric variables
-wsd.fac <- wsd.sum.wide %>%
-  select(negate(is.numeric)| "Year_latest", "nYears_avg")
-
-#plot
-# create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
-wsd.sum.wide %>% 
-  select_if(., is.numeric) %>%
-  cor(., use = "pairwise.complete.obs") %>%
-  corrplot(method = "color", 
-           type = "upper", order = "hclust", 
-           addCoef.col = "black", # Add coefficient of correlation
-           tl.col="black", tl.srt = 45, #Text label color and rotation
-           # hide correlation coefficient on the principal diagonal
-           diag = FALSE 
-           )
-
-#get colinearities  
-wsd.num <- wsd.sum.wide %>% 
-  select(-c("Year_latest", "nYears_avg")) %>%
-  select_if(., is.numeric)
-wsd.corr <- wsd.num %>%
-  cor(., use="pairwise.complete.obs")
-#removing upper triangle
-wsd.corr[upper.tri(wsd.corr)] <- 0
-diag(wsd.corr) <- 0
-
-#remove vars at abs(0.97) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
-wsd.list <-  apply(wsd.corr, 2, function(x) any(abs(x) > 0.97)) #list highly correlated variables
-wsd.nocor <- wsd.num[ , !wsd.list]
-#add back factors
-wsd.nocor <- cbind(wsd.fac, wsd.nocor)
-dim(wsd.nocor)
-head(wsd.nocor)
-```
-
-# COVID EDA & Summary Values
-
-## EDA
+## COVID EDA
 
 We will start by visualizing some of the most relevant variables and patterns in the cases, deaths and vaccinations data.
 
@@ -566,7 +595,7 @@ ggplotly(plot_deaths_weekly, tooltip = "text")
 
 Based on the plots above, we can see that countries had variable vaccination start dates and that each has reach a different number of vaccination milestones. For instance, Cuba started vaccinating relatively late (May 2021) but had 90% of its population vaccinated by January 2022. In the US, vaccinations started in December 2020 and have reached a rate of 70% in December 2021. It is unclear from these graphs whether vaccinations have direct consequences on the number of cases and/or deaths.  
 
-## Summary measures
+## COVID Summary Measures
 
 In order to come up with meaningful summary predictors and dependent variables that are compatible with our WSD, we'll next summaries our data on covid cases, deaths, and vaccinations. For our purposes in this project, we'll treat cases and deaths prior to each country's vaccine roll-out as independent variables (predictors) alongside the WSD. Vaccination data will be synthesized using PCA to create a the Vaccination Success Index (VSI), a composite score which we will use to indicate how well a country was able to vaccinate its citizens. 
 
@@ -697,7 +726,7 @@ head(covid.nocor)
 ```
 
 
-### Computing Vaccination Success Index
+## Computing Vaccination Success Index
 
 Since defining a country's success in administering vaccines is multifaceted, we'll construct the VSI on several summary metrics in addition to final vaccination counts. For instance, it is likely meaningful to account for how long it took each country to reach certain milestones (such as first starting to administer vaccines, administering X doses to each citizen, or vaccinating X% of the population) as well its peak rate of vaccination (the maximum rate of daily or weekly vaccinations) in determining whether a country did a "good job" in administering COVID vaccines to its populace. 
 
@@ -1131,7 +1160,7 @@ LASSO results using the `coef.1se` suggest again that life expectancy is an impo
 
 ## Regsubsets
 
-Next we'll run regsubsets to optimize a model by minimizing Cp. This does return a warning that regsubsets still finds our data to be colinear, so we re-run correlation reduction with 95% cutoff on `data.train` to whether we can build a more optimal model. While this alternate model does better in modeling VSI (see *Comparing Regsubsets Models* in the Appendix), we felt this improvement in performance was not worth the lack of comparability with LASSO, RF and other models built on the full `data.train` set of predictors and thus proceed with the following model.  
+Next we'll run regsubsets to optimize a model by minimizing Cp. This does return a warning that regsubsets still finds our data to be colinear, so we re-run correlation reduction with 95% cutoff on `data.train` to whether we can build a more optimal model. While this alternate model does better in modeling VSI (see `Comparing Regsubsets Models` in the Appendix), we felt this improvement in performance was not worth the lack of comparability with LASSO, RF and other models built on the full `data.train` set of predictors and thus proceed with the following model.  
 
 ```{r}
 regsub.fit1 <- regsubsets(VSI ~., data.train , nvmax=25, method="forward", really.big = TRUE)
@@ -1435,7 +1464,7 @@ df.testerr[nrow(df.testerr)+1,] <- c("weighted.ensemble", weighted.train.mse)
 df.testerr
 ```
 
-Given that our dataset was relatively small, a training MSE of around 0.5 in predicting VSI (which ranges almost 10 pts from `r min(final.df$VSI)` to `r max(final.df$VSI)`) may be considered very good performance; this was notably achieved by hypothesis-driven linear modeling, Random Forests, Regsubsets, and our weighted and unweighted ensemble models. While our final ensemble model did not perform as well on our validation data - suggesting that it and/or one of the underlying models were overfitted - *something something to finish this thought*. 
+Given that our dataset was relatively small, a training MSE of around 0.5 in predicting VSI (which ranges almost 10 pts from `r min(final.df$VSI)` to `r max(final.df$VSI)`) may be considered very good performance; this was notably achieved by hypothesis-driven linear modeling, Random Forests, Regsubsets, and our weighted and unweighted ensemble models. While our final ensemble model did not perform as well on our validation data - suggesting that it and/or one of the underlying models were overfitted - we hope the methodology explored here can be improved with application to similar, more complete datasets in the future. 
 
 Beyond prediction, the linear models provide a number of insights into country-level variables that are significantly related to vaccination success. Each factor, as well as policy recommendations to address it, are noted above in the Executive Summary. However, it is worth reiterating some key findings here.
 
@@ -1474,6 +1503,46 @@ Furthermore, none of the COVID-19 death or case metrics prior to vaccination ons
 We hope that these analyses may be useful in shaping future discussions about the varying strengths of each nation's COVID-19 vaccination campaigns and in global response to health crises more broadly. 
 
 # Appendix
+
+## Additional EDA
+
+### COVID
+
+Plotting change in key predictors over the 17-year data period.
+
+```{r, fig.width=15, fig.height=6}
+# EUROPE AND NORTH AMERICA
+# Do internet users incease over time
+ggplot(data.processed[data.processed$WorldRegion=="Europe and Northern America", ], aes(y=IndividualsUsingInternet, x=Year, colour=Country.Name)) +
+  geom_point(show.legend = FALSE) +
+  xlab("Year") +
+  ylab("Internet Users") + 
+  ggtitle("Internet Users by Year in Europe + North America")
+
+# Does urban population increase over time
+ggplot(data.processed[data.processed$WorldRegion=="Europe and Northern America", ], aes(y=UrbanPopulation.Prop, x=Year, colour=Country.Name)) +
+  geom_point(show.legend = FALSE) +
+  xlab("Year") +
+  ylab("Urban Population Proportion") + 
+  ggtitle("Proportion Urban Population by Year in Europe + North America")
+
+# ASIA
+# Do internet users incease over time
+ggplot(data.processed[data.processed$WorldRegion=="Central and Southern Asia", ], aes(y=IndividualsUsingInternet, x=Year, colour=Country.Name)) +
+  geom_point(show.legend = FALSE) +
+  xlab("Year") +
+  ylab("Internet Users") + 
+  ggtitle("Internet Users by Year in Central and Southern Asia")
+
+# Does urban population incease over time
+ggplot(data.processed[data.processed$WorldRegion=="Central and Southern Asia", ], aes(y=UrbanPopulation.Prop, x=Year, colour=Country.Name)) +
+  geom_point(show.legend = FALSE) +
+  xlab("Year") +
+  ylab("Urban Population Proportion") + 
+  ggtitle("Proportion Urban Population by Year in Central and Southern Asia")
+```
+
+
 
 ## Unused Dataframes
 Stuff that we output but wasn't used for modeling - may be useful for EDA or post-hoc analyses:
@@ -1747,3 +1816,17 @@ fit1.lm.comp <- update(fit1.lm, .~., data=na.omit(data.train))
 fit2.lm.comp <- update(fit2.lm, .~., data=na.omit(data.train))
 anova(fit1.lm.comp, fit2.lm.comp)
 ```
+
+Code initially used to identify discrepancies in country names between COVID and WSD dataframes, no longer fits in flow of document. 
+
+```{r, eval=FALSE}
+#some discrepancy in how countries are named, gonna fix that before proceeding
+wsd.country <- levels(wsd$country)
+covid.country <- levels(covid$country)
+#setdiff(wsd.country, covid.country) #only in wsd, not covid
+#setdiff(covid.country, wsd.country) #only in covid, not wsd
+
+covid$country <- recode_factor(covid$country, "UK"="United Kingdom", "Gambia"="Gambia, The", "Laos"="Lao PDR", "Egypt"="Egypt, Arab Rep.", "South Korea"="Korea, Rep.", "USA"="United States", "Russia"="Russian Federation", "Venezuela"="Venezuela, RB", "Democratic Republic Of The Congo"="DRC")
+wsd$country <- recode_factor(wsd$country,  "Iran, Islamic Rep."="Iran", "Bosnia and Herzegovina"="Bosnia And Herzegovina", "Cote d'Ivoire"="Cote D Ivoire", "Guinea-Bissau"="Guinea Bissau", "Kyrgyz Republic"="Kyrgyzstan", "North Macedonia"="Macedonia", "Eswatini"="Swaziland", "Vietnam"="Viet Nam", "Timor-Leste"="Timor Leste", "Slovak Republic"="Slovakia", "Congo, Rep."="Congo", "Congo, Dem. Rep."="DRC")
+```
+
